--- a/preamble.tex
+++ b/preamble.tex
@@ -277,6 +277,7 @@
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{example}[theorem]{Eksempel}
+\newtheorem{claim}[theorem]{Påstand}
 
 % Optionally, create a custom command for proof environment
 \renewenvironment{proof}{\vspace{10pt}{\large\noindent\bfseries\sffamily Bevis:\\}}{\qed \vspace{10pt}}
