--- a/KontekstFrieSprog.tex
+++ b/KontekstFrieSprog.tex
@@ -659,7 +659,8 @@ Hvis $x$ kan bringe $P$ fra $p$ med en tom stak til $q$ med en tom stak, så gen
 
 Ligesom der findes non-regulære sprog findes der også non-kontekstfrie sprog. Et eksempel på et sprog der ikke er regulært er $\{a^{n}b^{n} \;|\; n \ge 0\}\}$. Vi så dog også at dette sprog var kontekstfrit, men hvilke sprog er så ikke kontekst-frie? Sjovt nok kan vi udvide sproget en lille smule til $\{a^{n}b^{n}c^{n} \;|\; n \ge 0\}$ til at gøre det ikke-kontekst frit. Vi introducerer her \textit{pumpelemmaet for kontekstfrie sprog} til at hjælpe med at bevise at et sprog \textbf{ikke} er kontekst-frit.
 
-\begin{theorem}[Puempelemmaet for kontekstfri sprog]
+\begin{theorem}[Pumpelemmaet for kontekstfri sprog]
+  \label{teo:pumpelemmacfg}
   \index{Pumpelemma!Kontekstfri sprog}
   For hvert kontekstfrit sprog $L$ eksisterer der et $p \in \mathbb{N}$ således at $\forall w \in L$ hvor $|w| \geq p\; \exists u,v,x,y,z \in \Sigma^{*}$ således at $w = uvxyz$ og
   \begin{enumerate}
@@ -733,6 +734,365 @@ I Figur~\ref{fig:pumpelemmacfg} kan man se hvordan gentagelsen i parsetræet fun
 \end{proof}
 
 
+
+\subsection{Hovedpointer}%
+\label{subsec:keypoints}
+
+Disse pointer er taget fra Jørgens \href{https://imada.sdu.dk/u/jbj/DM553/us3.pdf}{Weekly Notes}.
+
+\begin{itemize}
+  \item En pushdown automat (PDA) er en nondeterministisk endelig automat forbedret med en stack, som gør PDA'en mere kraftfuld end en DFA eller NFA.
+        \begin{itemize}
+          \item Dette er grundet stakkens uendelige længde. Dog er der stadig begrænsninger, da stakken kører på en LIFO måde.
+        \end{itemize}
+
+  \item If we require that a PDA is deterministic, then we loose power in terms of which languages can be recognized. Note that this did not happen for Finite automata!
+        \begin{itemize}
+          \item Deterministiske PDA'er mister noget kraft, og ud fra Siper's egen forklaring (fra hans kursus på YouTube) er de meget tekniske, men ikke specielt nødvendige for forståelse af automater eller lignende.
+        \end{itemize}
+  \item I mentioned the following important fact without proof (see the paper listed under notes on bottom of the homepage) that \textbf{every context-free language over a one-symbol alphabet is also regular.} You are not supposed to be able to prove this, but you must be
+able to use this fact.
+  \item There exist languages that are not context-free, and the pumping lemma can be used to prove that this is the case for a given language. As for regular languages, the proof goes by  contradiction. A typical example of a non-context free language is $\{a^{n}b^{n}c^{n} \; | \; n \ge 0\}$.
+        \begin{itemize}
+          \item Ligesom beskrevet før, er dette fordi stakken ikke er uendeligt kraftfuld, trods dens uendelige længde. Dette er primært grundet dens LIFO måde at agere på.
+        \end{itemize}
+
+  \item Every regular language is context-free
+        \begin{itemize}
+          \item Alle sprog som er regulære er også kontekst-frie. Det vil sige at både endelige automater og pushdown automater kan genkende regulære sprog.
+        \end{itemize}
+
+  \item The class of context free languages is not closed under intersection. Note that this just means that there exists context free languages $L_{1}, L_{2}$ such that $L_{1} \cap L_{2}$ is not context-free. If we take $L_{1} = \{a^{i}b^{j}c^{k}\;|\; i,j,k \ge 0 \text{ and } i = j\}$ and $L_{2} = \{a^{i}b^{j}c^{k}\;|\;i,j,k \ge 0 \text{ and } j = k\}$, then both of these are context-free but $L_{1} \cap L_{2} = \{a^{n}b^{n}c^{n}\; | \; n \ge 0\}$ which we know is not context free.
+
+        \begin{itemize}
+          \item Det går begge veje. Der eksisterer også \textbf{nogle} snit af kontekstfrie sprog hvis resultat er kontekstfrie. (Specielt givet at alle regulære sprog også er kontekstfri, og snit er lukket under regulære sprog.)
+        \end{itemize}
+
+  \item PDA’s are equivalent to context-free grammars, since, for any PDA A, one can construct a grammar $G$ such that $L(A) = L(G)$, and vice versa.
+        \begin{itemize}
+          \item Dette kan ses i sektion~\ref{subsec:cfgpdaequiv}.
+        \end{itemize}
+  \item The class of context-free languages is closed under union, concatenation, and star, but \textbf{not} under intersection and complement. Note that this is NOT the same as saying that the complement of a context-free language is never context free. For example both $\Sigma^{*}$ and its complement, the empty set are context-free (they are also regular). Also $L = \{a^{n}b^{n}\; | \; n \ge 0\}$ and its complement are context-free (but not regular).
+
+  \item The intersection of a context free language $L_{1}$ with a regular language $L_{2}$ is again a context-free language. This can be seen by observing that if we are given a PDA $M_{1}$ for the context-free language $L_{1}$ over $\Sigma$ and a DFA $M_{2}$ for the regular language $L_{2}$, then we can make a PDA $M$ which simulates $M_{1}$ and $M_{2}$ in parallel: think of having pairs of states $(q,p)$ where $q$ is the current state of $M_{1}$ and $p$ is the current state of $M_{2}$. Then on a symbol $a \in \Sigma$ the PDA $M$ will behave as $M_{1}$ in the first coordinate (including updating the stack as $M_{1}$ would) and as $M_2$ in the second coordinate. Now we can make $M$ accept a string $w$ precisely when $M_{1}$ would accept $w$ (be in an accepting state with empty stack AND $M_{2}$ would be in an accepting state after reading $w$). Thus $M$ accepts $w$ if and only if $w \in L_{1} \cap L_{2}$, so $L_{1} \cap L_{2}$ is context-free (as it is accepted by a PDA).
+
+\end{itemize}
+
+
+\subsection{Opgaver}%
+\label{subsec:2exercises}
+
+\noindent
+{\Large \textbf{2.2}}\\
+\noindent
+\begin{enumerate}
+  \item[a.] Use the languages $A = \{a^{m}b^{n}c^{n} \; | \; m,n \ge 0\}$ and $B = \{a^{n}b^{n}c^{m} \; | \; m,n \ge 0\}$ together with example 2.36 to show that the class of context-free languages is not closed under intersection.
+\end{enumerate}
+
+Vi har to sprog, hvis snit vi skal finde, og derefter vise at dette sprog ikke er kontekst-frit. Snittet af disse to sprog er $\{a^{n}b^{n}c^{n}\; | \; n \ge 0\}$, som er vist i eksempel 2.36 til ikke at være regulært. (Hvorfor er det snittet?)
+
+\begin{enumerate}
+  \item[b.] Use part (a) and DeMorgan's Law (Theorem 0.20) to show that the class of context-free languages is not closed under complementation.
+\end{enumerate}
+
+\begin{theorem}[DeMorgan's Law]
+For alle to sæt $A$ og $B$, $\overline{A \cup B} = \overline{A} \cap \overline{B}$
+\end{theorem}
+
+Hvis vi vender teoremet om, til at være $\overline{A} \cap \overline{B} = \overline{A \cup B}$ får vi at snittet af komplementet af to sprog er lig komplementet af fællesmængden af de samme to sprog. Vi ved dog at snittet ikke er kontekst-frit, så da der kan sættes lighed mellem disse to kan de ikke være kontekst-fri. Vi kan også fjerne komplementet, så teoremet bliver transformeret til at blive $A \cap B = \overline{\overline{A} \cup \overline{B}}$\\\\
+
+\noindent
+{\Large \textbf{2.9}}\\
+\noindent
+Give a context-free grammar that generates the language
+\[ A = \{a^{i}b^{j}c^{k}\; | \; i = j \text{ or }j = k \text{ where } i,j,k \ge 0 \}\]
+
+\begin{equation*}
+  \begin{split}
+    S &\rightarrow I\;|\;K \\
+    I &\rightarrow aIbC\;|\; \varepsilon\\
+    C &\rightarrow cC\;|\; \varepsilon\\
+    K &\rightarrow AbKc \;| \; \varepsilon\\
+    A &\rightarrow aA \; | \; \varepsilon
+  \end{split}
+\end{equation*}
+\\\\
+
+\noindent
+{\Large \textbf{2.20}}\\
+\noindent
+Let $A/B = \{w \; | \; wx \in A \text{ for some }x \in B\}$. Show that if $A$ is context-free and $B$ is regular, then $A/B$ is context-free.
+
+Hvis $A$ er kontekst-frit og $B$ er regulært, og vi fjerner $B$ har vi noget der kun er kontekst-frit tilbage, og dermed må $A/B$ være kontekstfrit.\\\\
+
+\noindent
+{\Large \textbf{2.30}}\\ % TODO: Begynd
+\noindent
+Use the pumping lemma to show that the following languages are not context-free.
+
+\begin{enumerate}
+  \item[a.] $\{0^{n}1^{n}0^{n}1^{n}\;|\; n \ge 0\}$
+\end{enumerate}
+
+Pumping lemma er Teorem~\ref{teo:pumpelemmacfg}.
+
+Vi tager strengen $0^{p}1^{p}0^{p}1^{p}$, da $|w| = 4p$ satisfier vi kravet at længden er $\ge p$.
+
+Vi inddeller således: $u= 0^{p}, v = 1^{p}, x = 0^{p}, y = 1^{p}, z = \varepsilon$.
+
+Dette er umuligt, da 3. betingelse kræver at $|vxy| \leq p$
+
+\begin{enumerate}
+  \item[b.] $\{0^{n}\# 0^{2n} \# 0^{3n} \; | \; n \ge 0\}$
+\end{enumerate}
+
+Vi tager strengen $w = 0^{p}\#0^{2p}\#0^{3p}$. Det er nærmest umuligt at vise at det \textbf{er} kontekstfrit.
+
+\begin{enumerate}
+  \item[c.] $\{w\#t \; | \; w \text{ is a substring of }t \text{ where }w,t \in \{a,b\}^{*}\}$
+\end{enumerate}
+
+Vi tager strengen $a^{p}b^{p}\#a^{p}b^{p}$. Stortset uanset hvordan den opdeles, kan den ikke dække alle strenge, som er en del af sproget, og ender med at gå ud over sproget. F.eks. hvis $uvx = w_{1}, y = \#, z = w_{2}$.
+
+\begin{enumerate}
+  \item[d.] $\{t_{1}\#t_{2}\# \cdots \# t_{k}\;|\; k \ge 2, \text{ each } t_{i} \in \{a,b\}^{*}, \text{ and } t_{i}=t_{j} \text{ for some} i \ne j\}$
+\end{enumerate}
+Hvis vi tager samme streng som sidste opgave, får vi samme resultat.\\\\
+\noindent
+{\Large \textbf{2.32}}\\
+\noindent
+$\Sigma = \{1,2,3,4\}$, $C = \{w \in \Sigma^{*} \; | \; \text{ in }w \text{ the number of 1s equals the number of 2s,}$\\
+\noindent
+$\text{and the number of 3s equals the number of 4s}\}$ Show that $t$ is not context-free.
+
+Givet streng $1^{p}3^{p}2^{p}4^{p}$, er strengen ikke mulig at pumpe.\\\\
+
+\noindent
+{\Large \textbf{2.47}}\\
+\noindent
+
+Let $\Sigma = \{0,1\}$ and let $B$ be the collection of strings that contain at least one 1 in their second half. In other words, $B = \{uv \; |\; u \in \Sigma^{*}, v \in \Sigma^{*}1\Sigma^{*} \text{ and } |u| \ge |v|\}$
+
+\begin{enumerate}
+  \item[a.] Give a PDA that recognizes $B$.
+\end{enumerate}
+  \begin{tikzpicture}[node distance=2.0cm]
+    \node[state, initial] (q0) {$q_0$};
+    \node[state, right=of q0] (q1) {$q_{1}$};
+    \node[state, right=of q1] (q2) {$q_{2}$};
+    \node[state, accepting, right=of q2] (q3) {$q_{3}$};
+
+    \path[->]
+    (q0) edge node {$\varepsilon, \varepsilon \rightarrow \mathdollar$} (q1)
+    (q1) edge[loop above] node {$\alpha, \varepsilon \rightarrow \#$} (q1)
+    (q1) edge node {$\alpha, \varepsilon \rightarrow \#$} (q2)
+    (q2) edge[loop above] node {0, $\# \rightarrow \varepsilon$} (q2)
+    (q2) edge node {1, $\# \rightarrow \varepsilon$} (q3)
+    (q3) edge[loop above] node {$\alpha, \# \rightarrow \varepsilon$} (q3);
+    % (q1) edge[bend left] node {\texttt{1}} (q2)
+    % (q1) edge[loop above] node {\texttt{0}} ()
+    % (q2) edge[bend left] node {\texttt{0}} (q3)
+    % (q2) edge[loop above] node {\texttt{1}} ()
+    % (q3) edge[bend left] node {\texttt{0,1}} (q2);
+  \end{tikzpicture}
+
+PDA'en gætter nondeterministisk på hvornår vi er halvvejs.
+
+\begin{enumerate}
+  \item[b.] Give a CFG that generates $B$.
+\end{enumerate}
+
+Det gider vi faktisk ikke, så i stedet lader vi bare som om vi har kørt algoritmen.\\
+
+
+\noindent
+{\Large \textbf{Tekst opgave}}\\
+\noindent
+Show that the class of context-free languages is closed under union, that is, if $L, L'$ are context-free languages over the same alphabet $\Sigma$, then $L \cup L'$ is also context-free.
+
+Vi beviser ved at have en CFG, $G$:
+
+\begin{equation*}
+\begin{split}
+  S' &\rightarrow S_{1} \; | \; S_{2}\\
+ &\vdots
+\end{split}
+\end{equation*}
+
+Hvor $S_{1}$ er startsymbolet for grammatikken der genkender $L$, og $S_{2}$ er startsymbolet for grammatikken der genkender $L'$.\\
+
+
+\noindent
+{\Large \textbf{Problem 4 January 2002}}\\
+\noindent
+\begin{enumerate}
+    \item[a)] Consider the context-free grammar \( G = (V, \Sigma, S, R) \), given by
+    \( V := \{S, A, B, a, b\} \), \( \Sigma := \{a, b\} \) and
+    \[
+    R := \left\{
+    \begin{array}{l}
+    S \to AB, \\
+    S \to Ba, \\
+    A \to a, \\
+    A \to abAS, \\
+    A \to bAa, \\
+    B \to b, \\
+    B \to bSS, \\
+    B \to aSBB
+    \end{array}
+    \right.
+    \]
+    Prove that all words in \( L(G) \) contain the same number of occurrences of the letters \( a \) and \( b \).
+\end{enumerate}
+
+Vi beviser dette ved at lave det om til en Chomsky Grammar (Chomsky Normal Form).
+
+Step One: Add new start symbol
+\begin{align*}
+C &\to S \\
+S &\to AB \mid Ba \\
+A &\to a \mid abAS \mid bAa \\
+B &\to b \mid bSS \mid aSBB
+\end{align*}
+
+Step Two: Remove \(\varepsilon\) rules
+\begin{align*}
+C &\to S \\
+S &\to AB \mid Ba \\
+A &\to a \mid abAS \mid bAa \\
+B &\to b \mid bSS \mid aSBB
+\end{align*}
+
+Step Three: Remove unit rules
+\begin{align*}
+C &\to AB \mid Ba \\
+S &\to AB \mid Ba \\
+A &\to a \mid abAS \mid bAa \\
+B &\to b \mid bSS \mid aSBB
+\end{align*}
+
+Step Four: Split rules into parts
+\begin{align*}
+C &\to AB \mid Ba \\
+S &\to AB \mid Ba \\
+A &\to a \mid aE \mid bF \\
+B &\to b \mid bG \mid aI \\
+D &\to AS \\
+E &\to bD \\
+F &\to Aa \\
+G &\to SS \\
+H &\to BB \\
+I &\to SH
+\end{align*}
+
+Step Five: Replace terminals with variables
+\begin{align*}
+C &\to AB \mid BJ \\
+S &\to AB \mid BJ \\
+A &\to J \mid JE \mid KF \\
+B &\to K \mid KG \mid JI \\
+D &\to AS \\
+E &\to KD \\
+F &\to AJ \\
+G &\to SS \\
+H &\to BB \\
+I &\to SH \\
+J &\to a \\
+K &\to b
+\end{align*}
+
+Vi kan her se at der er lige mange occurences af $J$ og $K$ og dermed må den altid være sådan bum.
+
+\begin{enumerate}
+    \item[b)] Consider the context-free language
+    \[
+    L := \{a^n b^n | n \geq 1\} \cup \{a^n b^{2n} | n \geq 1\}
+    \]
+    over \( \Sigma = \{a, b\} \).
+    Write down a Pushdown automaton \( M \) which precisely accepts \( L \). This includes the definition of a transition table. Explain the way your PDA works.
+
+    \textbf{Hint for b):} To simplify the task your PDA is allowed to write in a single step several symbols onto the stack (but it can read only one at a time).
+\end{enumerate}
+
+Jeg skriver i stedet for at lave den, fordi jeg ikke gider. Relativt simpelt, vi starter med at pushe 2 a'er, for hvert a. Så branhcer vi nondeterministisk ud, og popper hhv. et a og 2 a'er, indtil vi ikke kan mere, når vi ser et b. Hvis ingen af disse bliver genkendt er de ikke en del af sproget.\\\\
+
+\noindent
+{\Large \textbf{Problem 4 January 2007}}\\
+\noindent
+
+\begin{enumerate}
+  \item[a.] Konstruer en kontekstfri grammatik $G$ for følgende sprog
+        \[L := \{a^{i}b^{j}a^{k} \mid i+k \ge j; i,j,k \in \mathbb{N} \cup \{0\}\}\]
+\end{enumerate}
+
+% \begin{equation*}
+% \begin{split}
+%   S &\rightarrow ABC\\
+%   A &\rightarrow a \mid AS\\
+%   B &\rightarrow b \mid BBC\\
+%   C &\rightarrow a \mid CC
+% \end{split}
+% \end{equation*}
+\begin{equation*}
+\begin{split}
+  S &\rightarrow AB\\
+  A &\rightarrow aA \mid aAb \mid a \\
+  B &\rightarrow Ba \mid bBa | a \\
+\end{split}
+\end{equation*}
+
+\begin{enumerate}
+  \item[b.] Betragt Sproget \[L := \{a^{i}b^{j} \mid i=j^{2}, i, j \in \mathbb{N}\}\] Er $L$ kontekstfrit? Bevis dit svar.
+\end{enumerate}
+
+Vi bruger pumpelemmaet (Teorem~\ref{teo:pumpelemmacfg}) til at bevise nonkontekstfrihed.
+Vi bruger strengen $a^{p^{2}}b^{p}$ hvis længde er $p^{3}$ hvilket tydeligt er $\ge p$. Uanset hvordan vi opdeler i substrenge $uvxyz$ vil en af reglerne altid blive brudt, mest sandsynligt regel. For eksempel $u = a^{p^{2}}, vxy = \varepsilon, z = b^{p}$, så bliver regel 2, $|vy|$ ikke overholdt.
+\\\\
+
+
+\noindent
+{\Large \textbf{Problem 2 January 2008}}\\
+\noindent
+Lad $L = \{a^{n}b^{k}c^{m} \mid n,k,m \ge 0 \text{ og } n+k = m\}$
+
+\begin{enumerate}
+  \item[a.] Gør rede for at $L$ ikke er regulært.
+\end{enumerate}
+
+Vi beviser nonregulæritet vha. pumpelemmaet, i teorem~\ref{the:pumpelemma}. Vi tager strengen $a^{p}b^{p}c^{2p}$, hvilket er klart over $p$ og er en del af sproget. Hvis vi så deler sproget op således at $x = a^{p}, y = b^{p}, z = c^{2p}$, ser vi at vi ikke kan pumpe på nogen som helst måde uden at det forlader sproget. Dermed er sproget ikke regulært.
+
+\begin{enumerate}
+  \item[b.] Er $L$ kontekstfrit?
+\end{enumerate}
+
+
+\begin{tikzpicture}[node distance=2.0cm]
+  \node[state, initial] (q0) {$q_0$};
+  \node[state, right=of q0] (q1) {$q_{1}$};
+  \node[state, right=of q1] (q2) {$q_{2}$};
+  \node[state, right=of q2] (q3) {$q_{3}$};
+  \node[state, accepting, below=of q3] (q4) {$q_{4}$};
+  \node[state, left=of q4] (q5) {$q_{5}$};
+
+  \path[->]
+  (q0) edge node {$\varepsilon, \varepsilon \rightarrow \mathdollar$} (q1)
+  (q1) edge[loop above] node {$a, \varepsilon \rightarrow x$} (q1)
+  (q1) edge node {\(\varepsilon, \varepsilon \rightarrow \varepsilon\)} (q2)
+  (q2) edge[loop above] node {$b, \varepsilon \rightarrow x$} (q2)
+  (q2) edge node {$\varepsilon, \varepsilon \rightarrow \varepsilon$} (q3)
+  (q3) edge[loop above] node {$c, x \rightarrow \varepsilon$} (q3)
+  (q3) edge node {$\varepsilon, \mathdollar \rightarrow \varepsilon$} (q4)
+  (q4)  edge node {$c, \varepsilon \rightarrow \varepsilon$} (q5);
+\end{tikzpicture}
+
+Ja!\\\\
+
+\noindent
+{\Large \textbf{Problem 2, October 2010.}}\\
+\noindent
+
+Betragt følgende sprog over alfabetet $\Sigma = \{a,b\}$.
+\[L_{2}= \{a^{m}a^{n}b^{n-1}a^{n-2}b^{n-3} \cdots a^{1} : m = 1,2,3 \ldots \text{ og } n = 1,3,5 \}\]
 
 
 
