--- a/DM553/preamble.tex
+++ b/DM553/preamble.tex
@@ -53,6 +53,10 @@
 \usetikzlibrary{automata} % Til automatgrafer
 \usetikzlibrary{positioning} % Positionering af knuder
 \usetikzlibrary{arrows.meta, arrows} % arrows til at ændre kanter
+\usetikzlibrary{calc}
+\usetikzlibrary{shapes.geometric}
+\usetikzlibrary{hobby}
+\usetikzlibrary{shadows.blur}
 \tikzset{
   node distance=2.5cm, % minimumsdistancen mellem to knuderj
   every state/.style={
@@ -289,6 +293,7 @@
 %====================%
 %  End of preamble.  %
 %====================%
+
 
 \begin{document}
 
